--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" >
+ 
   <head>
     <title>Amazon Order History Reporter: Control Panel</title>
     <link rel="stylesheet" type="text/css" href="./popup.css" />
@@ -137,9 +138,9 @@
             </table>
           </div>
         </div>
-        <div id="PurchasesPage"></div>
-        <div id="ReturnsPage"></div>
-        <div id="DonatePage"></div>
+        <div id="PurchasesPage"><p> HI!!!!</p></div>
+        <div id="ReturnsPage"><p> Bob</p></div>
+        <div id="DonatePage"><p>pepper</p></div>
       </div>  
     </div>
 
@@ -293,5 +294,6 @@
         </p>
       </div>
     </div>
+    <script src="control.bundle.js"></script>
   </body>
 </html>
