--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" >
- 
   <head>
     <title>Amazon Order History Reporter: Control Panel</title>
     <link rel="stylesheet" type="text/css" href="./popup.css" />
@@ -138,48 +137,49 @@
             </table>
           </div>
         </div>
-        <div id="PurchasesPage"><p> HI!!!!</p></div>
-        <div id="ReturnsPage"><p> Bob</p></div>
-        <div id="DonatePage"><p>pepper</p></div>
+        <div id="PurchasesPage"> <p> hi my name is max!!!</p> </div> 
+        <div id="ReturnsPage"><p> hi my name is max!!?</p></div>
+        <div id="DonatePage"><p> hi my name is max!??</p></div>
       </div>  
+      <div id="footer">
+        <table>
+          <tr>
+            <td class = "center">
+              <input type="button" class="azad_default_button"
+              id="Home_Page_Button"
+              value="Home"
+              title="back to Home page"/>
+            </td>
+            <td class = "center">
+              <input type="button" class="azad_default_button"
+              id="Payments_Page_Button"
+              value="Payments"
+              title="back to Payments page"/>
+            </td>
+            <td class = "center">
+              <input type="button" class="azad_default_button"
+              id="Returns_Page_Button"
+              value="Returns"
+              title="back to Returns page"/>
+            </td>
+            <td class = "center">
+              <input type="button" class="azad_default_button"
+              id="Donate_Page_Button"
+              value="Donate"
+              title="back to Donate page"/>
+            </td>
+          </tr>
+        </table>
+      <!-- </a> -->
+      </div>
     </div>
 
 
 
     <div class="azad_separator"></div>
-      <div class="azad_separator"></div>
-      <div id="footer">
-          <table>
-            <tr>
-              <td>
-                <input type="button" class="azad_default_button"
-                id="Home_Page_Button"
-                value="Home"
-                title="back to Home page"/>
-              </td>
-              <td>
-                <input type="button" class="azad_default_button"
-                id="Payments_Page_Button"
-                value="Payments"
-                title="back to Payments page"/>
-              </td>
-              <td>
-                <input type="button" class="azad_default_button"
-                id="Returns_Page_Button"
-                value="Returns"
-                title="back to Returns page"/>
-              </td>
-              <td>
-                <input type="button" class="azad_default_button"
-                id="Donate_Page_Button"
-                value="Donate"
-                title="back to Donate page"/>
-              </td>
-            </tr>
-          </table>
-        </a>
-      </div>
+    <div class="azad_separator"></div>
     
+  
     <div id="azad_page_extensionpay" class="azad_control_page">
       <div id="azad_extensionpay_status">
         Authorisation status goes here.
@@ -196,7 +196,7 @@
         </tr>
         <tr>
           <td>
-            <input type="button" class="azad_always_button"
+             <input type="button" class="azad_always_button"
                    id="azad_extpay_login_button"
                    value="renew log-in if you've paid"
                    title="renew log-in if you've paid"/>
@@ -294,6 +294,6 @@
         </p>
       </div>
     </div>
-    <script src="control.bundle.js"></script>
+    <script src="control.bundle.js"> </script>
   </body>
 </html>
